--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -36,6 +40,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <div class="cursor">
+      <canvas id="lollipop"></canvas>
+      <canvas id="stick"></canvas>
+    </div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -51,4 +59,5 @@
     src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
     crossorigin
   ></script>
+  <script src="%PUBLIC_URL%/spiral-cursor.js"></script>
 </html>
